--- a/package.json
+++ b/package.json
@@ -23,7 +23,16 @@
         "npm": "please-use-yarn"
     },
     "dependencies": {
+        "@ethersproject/abi": "^5.7.0",
+        "@ethersproject/address": "^5.7.0",
+        "@ethersproject/contracts": "^5.7.0",
+        "@ethersproject/providers": "^5.7.2",
+        "@headlessui/react": "^2.1.2",
+        "@heroicons/react": "^2.1.5",
+        "@metamask/sdk-react": "^0.27.0",
+        "ethers": "^6.13.2",
         "next": "14.2.5",
+        "nuqs": "^1.17.8",
         "react": "^18",
         "react-dom": "^18"
     },
