--- a/package.json
+++ b/package.json
@@ -23,15 +23,19 @@
         "npm": "please-use-yarn"
     },
     "dependencies": {
+        "@google/generative-ai": "^0.21.0",
         "@headlessui/react": "^2.1.2",
         "@heroicons/react": "^2.1.5",
         "@metamask/sdk-react": "^0.27.0",
+        "@shazow/whatsabi": "^0.14.1",
         "ethers": "^6.13.2",
         "ethers-decode-error": "^2.1.3",
         "next": "14.2.5",
         "nuqs": "^1.17.8",
+        "querystring": "^0.2.1",
         "react": "^18",
-        "react-dom": "^18"
+        "react-dom": "^18",
+        "react-toastify": "^10.0.5"
     },
     "devDependencies": {
         "@commitlint/cli": "^19.4.0",
@@ -46,5 +50,6 @@
         "prettier": "^3.3.3",
         "tailwindcss": "^3.4.1",
         "typescript": "^5"
-    }
+    },
+    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
