--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "@heroicons/react": "^2.1.5",
         "@metamask/sdk-react": "^0.27.0",
         "@shazow/whatsabi": "^0.14.1",
+        "@types/react-syntax-highlighter": "^15.5.13",
+        "clsx": "^2.1.1",
         "ethers": "^6.13.2",
         "ethers-decode-error": "^2.1.3",
         "next": "14.2.5",
@@ -35,7 +37,9 @@
         "querystring": "^0.2.1",
         "react": "^18",
         "react-dom": "^18",
-        "react-toastify": "^10.0.5"
+        "react-syntax-highlighter": "^15.6.1",
+        "react-toastify": "^10.0.5",
+        "react-tooltip": "^5.28.0"
     },
     "devDependencies": {
         "@commitlint/cli": "^19.4.0",
