--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "clsx": "^2.1.1",
         "ethers": "^6.13.2",
         "ethers-decode-error": "^2.1.3",
+        "ioredis": "^5.4.1",
         "next": "14.2.5",
         "nuqs": "^1.17.8",
         "querystring": "^0.2.1",
