--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "interfacex",
+    "name": "smartscan",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -23,24 +23,27 @@
         "npm": "please-use-yarn"
     },
     "dependencies": {
+        "@coinbase/wallet-sdk": "^4.2.2",
         "@google/generative-ai": "^0.21.0",
         "@headlessui/react": "^2.1.2",
         "@heroicons/react": "^2.1.5",
-        "@metamask/sdk-react": "^0.27.0",
+        "@reown/appkit": "^1.3.0",
+        "@reown/appkit-adapter-ethers": "^1.3.0",
         "@shazow/whatsabi": "^0.14.1",
         "@types/react-syntax-highlighter": "^15.5.13",
         "clsx": "^2.1.1",
-        "ethers": "^6.13.2",
+        "ethers": "^6.13.4",
         "ethers-decode-error": "^2.1.3",
         "ioredis": "^5.4.1",
-        "next": "14.2.5",
+        "next": "15.0.2",
         "nuqs": "^1.17.8",
         "querystring": "^0.2.1",
-        "react": "^18",
-        "react-dom": "^18",
+        "react": "19.0.0-rc-02c0e824-20241028",
+        "react-dom": "19.0.0-rc-02c0e824-20241028",
         "react-syntax-highlighter": "^15.6.1",
         "react-toastify": "^10.0.5",
-        "react-tooltip": "^5.28.0"
+        "react-tooltip": "^5.28.0",
+        "usehooks-ts": "^3.1.0"
     },
     "devDependencies": {
         "@commitlint/cli": "^19.4.0",
@@ -49,7 +52,7 @@
         "@types/react": "^18",
         "@types/react-dom": "^18",
         "eslint": "^8",
-        "eslint-config-next": "14.2.5",
+        "eslint-config-next": "15.0.2",
         "husky": "^9.1.4",
         "postcss": "^8",
         "prettier": "^3.3.3",
