feat: update function input to allow complex data input

--- a/package.json
+++ b/package.json
@@ -26,20 +26,23 @@
         "@coinbase/wallet-sdk": "^4.2.2",
         "@google/generative-ai": "^0.21.0",
         "@headlessui/react": "^2.1.2",
-        "@heroicons/react": "^2.1.5",
+        "@iconify/react": "^5.1.0",
         "@reown/appkit": "^1.3.0",
         "@reown/appkit-adapter-ethers": "^1.3.0",
         "@shazow/whatsabi": "^0.14.1",
+        "@types/lodash": "^4.17.13",
         "@types/react-syntax-highlighter": "^15.5.13",
         "clsx": "^2.1.1",
         "ethers": "^6.13.4",
         "ethers-decode-error": "^2.1.3",
         "ioredis": "^5.4.1",
+        "lodash": "^4.17.21",
         "next": "15.0.2",
         "nuqs": "^1.17.8",
         "querystring": "^0.2.1",
         "react": "19.0.0-rc-02c0e824-20241028",
         "react-dom": "19.0.0-rc-02c0e824-20241028",
+        "react-hook-form": "^7.53.2",
         "react-syntax-highlighter": "^15.6.1",
         "react-toastify": "^10.0.5",
         "react-tooltip": "^5.28.0",
