--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
-NEXT_PUBLIC_METAMASK_COMM_SERVER_URL=https://metamask-sdk.api.cx.metamask.io
+NEXT_PUBLIC_CHAINID_NETWORK_ENDPOINT=https://chainid.network
+NEXT_PUBLIC_ETHERSCAN_API_URL=https://api.etherscan.io/v2
+NEXT_PUBLIC_OPENCHAIN_API_URL=https://api.openchain.xyz/signature-database/v1/lookup
+ETHERSCAN_API_KEY=
+NEXT_PUBLIC_GEMINI_API_KEY=
+NEXT_PUBLIC_REOWN_CLOUD_APP_ID=
+REDIS_HOST=
+REDIS_PASSWORD=
+REDIS_PORT=
