--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
     "name": "extrascan",
-    "version": "0.1.0",
-    "private": true,
+    "version": "1.0.0",
+    "description": "monorepo for extrascan",
     "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint",
+        "prepare": "husky",
         "format": "prettier --write .",
-        "prepare": "husky"
+        "lint": "pnpm -r lint",
+        "dev:webapp": "pnpm run dev --filter webapp",
+        "build:webapp": "pnpm run build --filter webapp",
+        "start:webapp": "pnpm run start --filter webapp",
+        "build": "pnpm -r build"
     },
+    "keywords": [],
+    "author": "ajayimikeofficial@gmail.com",
+    "license": "ISC",
     "prettier": {
         "singleQuote": false,
         "trailingComma": "es5",
@@ -19,50 +23,13 @@
     },
     "engines": {
         "node": ">=20.12.2",
-        "yarn": ">=1.22.19",
-        "npm": "please-use-yarn"
+        "pnpm": ">=9.15.1",
+        "yarn": "please-use-pnpm",
+        "npm": "please-use-pnpm"
     },
     "dependencies": {
-        "@anthropic-ai/sdk": "^0.33.1",
-        "@coinbase/wallet-sdk": "^4.2.2",
-        "@google/generative-ai": "^0.21.0",
-        "@headlessui/react": "^2.1.2",
-        "@iconify/react": "^5.1.0",
-        "@reown/appkit": "^1.3.0",
-        "@reown/appkit-adapter-ethers": "^1.3.0",
-        "@shazow/whatsabi": "^0.14.1",
-        "@types/lodash": "^4.17.13",
-        "@types/react-syntax-highlighter": "^15.5.13",
-        "clsx": "^2.1.1",
-        "ethers": "^6.13.4",
-        "ethers-decode-error": "^2.1.3",
-        "ioredis": "^5.4.1",
-        "lodash": "^4.17.21",
-        "next": "15.0.2",
-        "nuqs": "^1.17.8",
-        "openai": "^4.77.0",
-        "querystring": "^0.2.1",
-        "react": "19.0.0-rc-02c0e824-20241028",
-        "react-dom": "19.0.0-rc-02c0e824-20241028",
-        "react-hook-form": "^7.53.2",
-        "react-syntax-highlighter": "^15.6.1",
-        "react-toastify": "^10.0.5",
-        "react-tooltip": "^5.28.0",
-        "usehooks-ts": "^3.1.0"
-    },
-    "devDependencies": {
         "@commitlint/cli": "^19.4.0",
         "@commitlint/config-conventional": "^19.2.2",
-        "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
-        "eslint": "^8",
-        "eslint-config-next": "15.0.2",
-        "husky": "^9.1.4",
-        "postcss": "^8",
-        "prettier": "^3.3.3",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5"
-    },
-    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+        "husky": "^9.1.4"
+    }
 }
