feat: refactor webapp to utilize shared package and improve code organization
- Updated imports in webapp components and utilities to use the new @extrascan/shared package.
- Added new shared components, hooks, and utilities for better code reuse.
- Removed unused files and updated package.json scripts for shared builds.
- Cleaned up .env.example and .gitignore for better clarity.
- Enhanced webpack configuration to handle server and client-specific settings.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
         "dev:webapp": "pnpm --filter webapp run dev",
         "build:webapp": "pnpm --filter webapp run build",
         "start:webapp": "pnpm --filter webapp run start",
-        "build": "pnpm -r build"
+        "build": "pnpm -r build",
+        "build:shared": "pnpm --filter @extrascan/shared build",
+        "dev:shared": "pnpm --filter @extrascan/shared dev",
+        "clean": "pnpm -r clean"
     },
     "keywords": [],
     "author": "ajayimikeofficial@gmail.com",
