--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -9,37 +9,28 @@
         "lint": "next lint"
     },
     "dependencies": {
-        "@anthropic-ai/sdk": "^0.33.1",
-        "@coinbase/wallet-sdk": "^4.2.2",
-        "@google/generative-ai": "^0.21.0",
         "@headlessui/react": "^2.2.0",
         "@iconify/react": "^5.1.0",
-        "@reown/appkit": "^1.3.0",
-        "@reown/appkit-adapter-ethers": "^1.3.0",
-        "@shazow/whatsabi": "^0.14.1",
         "clsx": "^2.1.1",
         "ethers": "^6.13.4",
-        "ethers-decode-error": "^2.1.3",
-        "ioredis": "^5.4.1",
-        "lodash": "^4.17.21",
         "next": "15.0.2",
         "nuqs": "^1.17.8",
-        "openai": "^4.77.0",
-        "querystring": "^0.2.1",
-        "react": "19.0.0-rc-02c0e824-20241028",
-        "react-dom": "19.0.0-rc-02c0e824-20241028",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
         "react-hook-form": "^7.53.2",
         "react-syntax-highlighter": "^15.6.1",
         "react-toastify": "^10.0.5",
-        "react-tooltip": "^5.28.0",
         "usehooks-ts": "^3.1.0",
-        "viem": "^2.21.57"
+        "@extrascan/shared": "workspace:*",
+        "@reown/appkit": "^1.3.0",
+        "@shazow/whatsabi": "^0.14.1",
+        "@reown/appkit-adapter-ethers": "^1.3.0",
+        "ethers-decode-error": "^2.1.3"
     },
     "devDependencies": {
-        "@types/lodash": "^4.17.13",
         "@types/node": "^20",
-        "@types/react": "^18",
-        "@types/react-dom": "^18",
+        "@types/react": "^19.0.0",
+        "@types/react-dom": "^19.0.0",
         "@types/react-syntax-highlighter": "^15.5.13",
         "eslint": "^8",
         "eslint-config-next": "15.0.2",
