--- a/packages/shared/.eslintrc.json
+++ b/packages/shared/.eslintrc.json
@@ -5,6 +5,7 @@
     "rules": {
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/explicit-module-boundary-types": "off",
-        "@typescript-eslint/no-require-imports": "off"
+        "@typescript-eslint/no-require-imports": "off",
+        "@typescript-eslint/no-var-requires": "off"
     }
 }
