--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -9,10 +9,15 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@extrascan/shared": "workspace:*",
         "@headlessui/react": "^2.2.0",
         "@iconify/react": "^5.1.0",
+        "@reown/appkit": "^1.3.0",
+        "@reown/appkit-adapter-ethers": "^1.3.0",
+        "@shazow/whatsabi": "^0.14.1",
         "clsx": "^2.1.1",
         "ethers": "^6.13.4",
+        "ethers-decode-error": "^2.1.3",
         "next": "15.0.2",
         "nuqs": "^1.17.8",
         "react": "^19.0.0",
@@ -20,12 +25,7 @@
         "react-hook-form": "^7.53.2",
         "react-syntax-highlighter": "^15.6.1",
         "react-toastify": "^10.0.5",
-        "usehooks-ts": "^3.1.0",
-        "@extrascan/shared": "workspace:*",
-        "@reown/appkit": "^1.3.0",
-        "@shazow/whatsabi": "^0.14.1",
-        "@reown/appkit-adapter-ethers": "^1.3.0",
-        "ethers-decode-error": "^2.1.3"
+        "usehooks-ts": "^3.1.0"
     },
     "devDependencies": {
         "@types/node": "^20",
