--- a/apps/extension/public/manifest.json
+++ b/apps/extension/public/manifest.json
@@ -7,6 +7,12 @@
         "default_popup": "index.html"
     },
     "permissions": ["storage", "activeTab", "clipboardRead"],
+    "content_scripts": [
+        {
+            "matches": ["https://sepolia.etherscan.io/*"],
+            "js": ["content.js"]
+        }
+    ],
     "icons": {
         "16": "icons/icon-16.png",
         "48": "icons/icon-48.png",
