--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -53,13 +53,17 @@
         "ioredis": "^5.4.1",
         "lodash": "^4.17.21",
         "openai": "^4.77.0",
-        "viem": "^2.21.57"
+        "viem": "^2.21.57",
+        "react-syntax-highlighter": "^15.5.0",
+        "react-toastify": "^10.0.4",
+        "usehooks-ts": "^2.15.1"
     },
     "devDependencies": {
         "@types/lodash": "^4.17.13",
         "@types/node": "^20",
         "@types/react": "^19.0.0",
         "@types/react-dom": "^19.0.0",
+        "@types/react-syntax-highlighter": "^15.5.11",
         "autoprefixer": "^10.4.20",
         "eslint": "^8",
         "postcss": "^8",
