--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -33,6 +33,7 @@
         "typescript": "^5.2.2",
         "typescript-eslint": "^8.18.2",
         "vite": "^5.1.4",
-        "vite-plugin-node-polyfills": "^0.22.0"
+        "vite-plugin-node-polyfills": "^0.22.0",
+        "vite-plugin-node-stdlib-browser": "^0.2.1"
     }
 }
