feat: proxy contract detection project configuration enhancement
- Update package.json with new scripts for extension development
- Add Tailwind CSS configuration and PostCSS setup for the extension
- Introduce new dependencies for improved functionality
- Update shared components and types to support proxy contract detection
- Add .env file for cloud app configuration
- Modify storage and contract details utilities

--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
     "version": "1.0.0",
     "description": "monorepo for extrascan",
     "scripts": {
-        "prepare": "husky",
-        "format": "prettier --write .",
-        "lint": "pnpm -r lint",
+        "build:shared": "pnpm --filter shared run build",
+        "dev:shared": "pnpm --filter shared run dev",
         "dev:webapp": "pnpm --filter webapp run dev",
         "build:webapp": "pnpm --filter webapp run build",
         "start:webapp": "pnpm --filter webapp run start",
+        "dev:extension": "pnpm --filter extension run dev",
+        "build:extension": "pnpm --filter extension run build",
+        "lint": "pnpm -r lint",
+        "format": "prettier --write .",
         "build": "pnpm -r build",
-        "build:shared": "pnpm --filter @extrascan/shared build",
-        "dev:shared": "pnpm --filter @extrascan/shared dev",
-        "clean": "pnpm -r clean"
+        "clean": "pnpm -r clean",
+        "prepare": "husky"
     },
     "keywords": [],
     "author": "ajayimikeofficial@gmail.com",
