--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -12,10 +12,16 @@
     "dependencies": {
         "@extrascan/shared": "workspace:*",
         "@iconify/react": "^5.1.0",
+        "@reown/appkit": "^1.3.0",
+        "@reown/appkit-adapter-ethers": "^1.3.0",
         "clsx": "^2.1.1",
+        "ethers": "^6.13.4",
+        "ethers-decode-error": "^2.1.3",
         "framer-motion": "^11.15.0",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "react-hook-form": "^7.53.2",
+        "@headlessui/react": "^2.2.0"
     },
     "devDependencies": {
         "@types/chrome": "^0.0.260",
