--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@extrascan/shared": "workspace:*",
+        "@headlessui/react": "^2.2.0",
         "@iconify/react": "^5.1.0",
         "@reown/appkit": "^1.3.0",
         "@reown/appkit-adapter-ethers": "^1.3.0",
@@ -20,10 +21,12 @@
         "framer-motion": "^11.15.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "react-hook-form": "^7.53.2",
-        "@headlessui/react": "^2.2.0"
+        "react-hook-form": "^7.53.2"
     },
     "devDependencies": {
+        "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+        "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
+        "@originjs/vite-plugin-commonjs": "^1.0.3",
         "@types/chrome": "^0.0.260",
         "@types/react": "^19.0.0",
         "@types/react-dom": "^19.0.0",
@@ -31,10 +34,13 @@
         "@typescript-eslint/parser": "^7.0.0",
         "@vitejs/plugin-react": "^4.2.1",
         "autoprefixer": "^10.4.18",
+        "crypto-browserify": "^3.12.1",
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.16",
         "globals": "^15.14.0",
         "postcss": "^8.4.35",
+        "querystring-es3": "^0.2.1",
+        "rollup-plugin-node-polyfills": "^0.2.1",
         "tailwindcss": "^3.4.1",
         "typescript": "^5.2.2",
         "typescript-eslint": "^8.18.2",
