--- a/package.json
+++ b/package.json
@@ -36,5 +36,10 @@
         "@commitlint/cli": "^19.4.0",
         "@commitlint/config-conventional": "^19.2.2",
         "husky": "^9.1.4"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.20",
+        "postcss": "^8.1.0",
+        "tailwindcss": "^3.4.1"
     }
 }
