feat: refactor UniversalDApp and contract interaction components
- Move UniversalDApp component from shared to webapp package
- Update contract function components to support dynamic user address
- Introduce new read and write contract function components
- Modify contract hooks to support more flexible provider and address handling
- Update network selector and header components
- Add viem dependency to webapp package

--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -25,7 +25,8 @@
         "react-hook-form": "^7.53.2",
         "react-syntax-highlighter": "^15.6.1",
         "react-toastify": "^10.0.5",
-        "usehooks-ts": "^3.1.0"
+        "usehooks-ts": "^3.1.0",
+        "viem": "^2.21.57"
     },
     "devDependencies": {
         "@types/node": "^20",
