--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -19,9 +19,9 @@
         "jsx": "react-jsx",
         "baseUrl": ".",
         "paths": {
-            "@/*": ["./src/*"],
-        },
+            "@/*": ["./src/*"]
+        }
     },
     "include": ["src/**/*.js", "src/**/*.ts", "src/**/*.tsx"],
-    "exclude": ["node_modules", "dist"],
+    "exclude": ["node_modules", "dist"]
 }
