--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -1,51 +1,52 @@
 {
-    "name": "@extrascan/extension",
-    "private": true,
-    "version": "1.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build && vite build --config vite.content.config.ts",
-        "lint": "eslint .",
-        "preview": "vite preview"
-    },
-    "dependencies": {
-        "@extrascan/shared": "workspace:*",
-        "@headlessui/react": "^2.2.0",
-        "@iconify/react": "^5.1.0",
-        "@reown/appkit": "^1.3.0",
-        "@reown/appkit-adapter-ethers": "^1.3.0",
-        "clsx": "^2.1.1",
-        "ethers": "^6.13.4",
-        "ethers-decode-error": "^2.1.3",
-        "framer-motion": "^11.15.0",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "react-hook-form": "^7.53.2"
-    },
-    "devDependencies": {
-        "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-        "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
-        "@originjs/vite-plugin-commonjs": "^1.0.3",
-        "@types/chrome": "^0.0.260",
-        "@types/react": "^19.0.0",
-        "@types/react-dom": "^19.0.0",
-        "@typescript-eslint/eslint-plugin": "^7.0.0",
-        "@typescript-eslint/parser": "^7.0.0",
-        "@vitejs/plugin-react": "^4.2.1",
-        "autoprefixer": "^10.4.18",
-        "crypto-browserify": "^3.12.1",
-        "eslint-plugin-react-hooks": "^5.1.0",
-        "eslint-plugin-react-refresh": "^0.4.16",
-        "globals": "^15.14.0",
-        "postcss": "^8.4.35",
-        "querystring-es3": "^0.2.1",
-        "rollup-plugin-node-polyfills": "^0.2.1",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5.2.2",
-        "typescript-eslint": "^8.18.2",
-        "vite": "^5.1.4",
-        "vite-plugin-node-polyfills": "^0.22.0",
-        "vite-plugin-node-stdlib-browser": "^0.2.1"
-    }
+  "name": "@extrascan/extension",
+  "displayName": "Extrascan",
+  "version": "0.0.1",
+  "description": "An extension for ABI extrapolation",
+  "author": "Ajayi Adekunle Michael <ajayimikeofficial@gmail.com>",
+  "scripts": {
+    "dev": "plasmo dev",
+    "build": "plasmo build",
+    "package": "plasmo package"
+  },
+  "dependencies": {
+    "@extrascan/shared": "workspace:*",
+    "@headlessui/react": "^2.2.0",
+    "@iconify/react": "^5.1.0",
+    "@plasmohq/storage": "^1.15.0",
+    "@reown/appkit": "^1.3.0",
+    "@reown/appkit-adapter-ethers": "^1.3.0",
+    "@tanstack/react-query": "^5.67.1",
+    "clsx": "^2.1.1",
+    "ethers": "^6.13.4",
+    "ethers-decode-error": "^2.1.3",
+    "framer-motion": "^11.15.0",
+    "plasmo": "0.90.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.53.2",
+    "viem": "^2.21.57",
+    "wagmi": "^2.14.12"
+  },
+  "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "4.1.1",
+    "@types/chrome": "0.0.258",
+    "@types/node": "20.11.5",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.3",
+    "prettier": "3.2.4",
+    "tailwindcss": "3",
+    "typescript": "5.3.3"
+  },
+  "type": "module",
+  "manifest": {
+    "host_permissions": [
+      "https://*/*"
+    ],
+    "permissions": [
+      "clipboardRead"
+    ]
+  }
 }
